[package]
name = "detour-test"
version = "0.1.0"
authors = ["amos"]
edition = "2018"

[dependencies]
detour = { version = "0.6.0", default-features = false }
lazy_static = "1.3.0"
widestring = "0.4.0"
ctor = "0.1.7"
libc-print = "0.1.7"

[lib]
crate-type = ["cdylib"]
name = "detour_test_lib"
path = "src/main.rs"

[[bin]]
name = "detour_test"
path = "src/main.rs"

